# 2000m

./: .gitignore  Cargo.toml  LICENSE  MISSION.md  README.md  ROADMAP.md  RULES.md
conformance/: Cargo.toml
protocol/: 2000m.driver.v0.md  2000m.json.schema.json
results/: README.md  example-placeholder-final.json  leaderboard.md  results.json
scripts/: check_v2_feedback_parity.py  check_v3_feedback_parity.py  collect_v3_token_telemetry.py  render_results.py  render_v3_private_report.py  run_v2_stage1_smokes.py  run_v3_feedback_parity_smoke.py  run_v3_mechanical_smokes.py  run_v3_private_pilot_smoke.py  run_v3_token_telemetry_smoke.py  run_v3_visual_smokes.py  run_v3_workflow_gauntlet_smoke.py  scan_changed_public_safety.py  validate_v2_campaigns.py  validate_v3_campaign_protocol.py  validate_v3_schemas.py  validate_v3_visual_packages.py  validate_v3_workflow_gauntlet.py  validate_v3_workflow_scenarios.py
stub-driver/: 2000m.json  Cargo.toml
v1/: 2000m.driver.v1.md  AC_SPEC.md  DESIGN.md  README.md
v1/conformance/: Cargo.toml
v1/conformance/src/: main.rs
v2/: DESIGN.md  EXPERIMENT_PROTOCOL.md  PRIVATE_PILOT_AB_RUNBOOK.md  README.md  VISUAL_ARTIFACT_TRACK.md  campaign.schema.json  result.schema.json  run-record.schema.json  scenario.schema.json
v3/: 2000m.driver.v3.md  DESIGN.md  EVIDENCE_AND_CLAIMS.md  IMPLEMENTATION_PLAN.md  MANIFEST_AND_CAPTURE.md  MECHANICAL_AC_SPEC.md  PAIRED_CAMPAIGN_PROTOCOL.md  POSTMORTEM.md  README.md  SANDBOX_AND_RESOURCE_POLICY.md  SCORING_MODEL.md  SPEC_GAPS_AND_DECISIONS.md  VISUAL_RUBRIC.md  WORKFLOW_GAUNTLET.md  (+8 more)
(+103 files in other folders)
