[package]
name = "m2000-conformance"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "2000m benchmark conformance suite v1 - 28 ACs with quality scoring"

[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.21"
statistical = "1.0"
